<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WordCardActivity"
    android:background="@color/text_color_1"
    android:padding="21dp">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="52dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="335dp"
        android:background="@color/text_color_1"
        android:contentDescription="@string/back_button"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_button" />

    <ImageView
        android:id="@+id/wordImage"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backButton"
        app:srcCompat="@drawable/word_image"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/primary_color_2"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="60dp"
        android:contentDescription="@string/word_name"/>

    <TextView
        android:id="@+id/nameOfWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wordImage"
        android:text="Cat"
        android:textAlignment="center"
        android:textSize="40sp"
        android:layout_marginTop="45dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameOfWord"
        android:text="@string/sample_text"
        android:textAlignment="center"
        android:textSize="30sp"/>


</androidx.constraintlayout.widget.ConstraintLayout>